fix: text align center

--- a/calculadoraMercado/dark.css
+++ b/calculadoraMercado/dark.css
@@ -17,4 +17,8 @@ button{
 }
 p{
   font-size: 1.5em;
+  text-align: center;
+}
+title{
+  text-align: center;
 }
